RESOLVED FIXED21155
controls should not show when the media element is not visible
https://bugs.webkit.org/show_bug.cgi?id=21155
Summary controls should not show when the media element is not visible
Eric Carlson
Reported 2008-09-26 15:19:59 PDT
Playback controls are visible even when the media element is set to visibility:hidden. To reproduce: 1. Open the attached page 2. Click the "visibility" href to hide the <video> element 3. Controls still visible. 4. Show the element by clicking the "visibility" link again 5. Start the movie playing so the controls hide 6. Click the "visibility" href to hide the <video> element 7. Mouse over the hidden <video> element 8. Controls show up again.
Attachments
test case (1.35 KB, text/html)
2008-09-26 15:21 PDT, Eric Carlson
no flags
proposed patch (3.89 KB, patch)
2008-09-26 15:59 PDT, Eric Carlson
adele: review+
Eric Carlson
Comment 1 2008-09-26 15:21:26 PDT
Created attachment 23860 [details] test case
Eric Carlson
Comment 2 2008-09-26 15:25:22 PDT
Also, the controls never show up again if element is set to visibility:hidden while it is also display:none. 1. Open the attached page 2. Click the "display" link to set <video> element to display:none 3. Click the "visibility" link to set visibility:hidden 4. Click the "display" link to set display:block 5. Click the "visibility" link to set visibility:visible The controls aren't visible and don't ever show up unless you make the element visible while it is display:none.
Eric Carlson
Comment 3 2008-09-26 15:59:03 PDT
Created attachment 23861 [details] proposed patch
Andrew Wellington
Comment 4 2008-10-12 17:13:40 PDT
This was landed by Eric Carlson in r37470.
Note You need to log in before you can comment on or make changes to this bug.