WebCore/rendering/RenderMedia.h
@@ -109,6 +109,7 @@ private:
     double m_opacityAnimationStartTime;
     float m_opacityAnimationFrom;
     float m_opacityAnimationTo;
+    EVisibility m_previousVisible;
 };
 
 } // namespace WebCore
